[tool.poetry]
name = "hexlet-code"
version = "0.3.1"
description = ""
authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "<https://github.com/Trankvill/python-project-lvl1>"
classifiers = [
	"Topic :: Software Development :: Build Tools",
   	"Topic :: Software Development :: Libraries :: Python Modules",
	"Programming Language :: Python :: 3.8",
	"Framework :: IPython",
	"Operating System :: OS Ubuntu 22.04 LTS",
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
numexpr = "^2.8.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
